--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -168,7 +168,7 @@
 }
 .banner-text {
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
   p {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
@@ -199,7 +199,7 @@
     }
     @include rmaxwd(991) {
       font-size: 80px;
-      transform: translate(0, -15%);
+      transform: translate(0, -10%);
     }
   }
 }
