--- a/sass/modules/breadcrumb/_breadcrumb.scss
+++ b/sass/modules/breadcrumb/_breadcrumb.scss
@@ -1,20 +1,37 @@
 .page-breadcrumb-area {
-  padding-top: 215px;
-  padding-bottom: 125px;
+  padding-top: 232px;
   position: relative;
   z-index: 2;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  background-color: #000000B2;
-
+  background-color: #000000b2;
   @include sm {
-    padding-top: 168px;
-    padding-bottom: 100px;
+    padding-top: 104px;
+  }
+  .shape {
+    position: absolute;
+    top: 232px;
+    left: 0;
+    @include md {
+      top: 204px;
+    }
+    @include sm {
+      top: 104px;
+    }
+  }
+  .shape-two {
+    position: absolute;
+    bottom: 0;
+    left: 0;
   }
 }
 .page-overlay {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.70) 0%, rgba(0, 0, 0, 0.70) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(0, 0, 0, 0.7) 100%
+  );
   height: 100%;
   left: 0;
   position: absolute;
@@ -28,12 +45,11 @@
   h3,
   .page-title {
     font-family: $heading-font;
-    font-size: 48px;
     color: $white;
-    margin-bottom: 0;
-    text-transform: capitalize;
-    line-height: initial;
-    font-weight: 600;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
     text-align: center;
 
     @include rmaxwd(375) {
@@ -47,11 +63,6 @@
   }
 }
 .breadcrumb-wrapper {
-  padding: 0px;
-
-  @include rmaxwd(1199) {
-    padding: 0;
-  }
 }
 .breadcrumb-list {
   text-align: center;
@@ -60,7 +71,7 @@
     margin-bottom: 0;
     padding-left: 0;
     display: inline-flex;
-    gap:0 12px;
+    gap: 0 12px;
     flex-wrap: wrap;
     justify-content: center;
     text-align: left;
@@ -72,7 +83,7 @@
     li {
       list-style: none;
       display: inline-flex;
-      gap:0 12px;
+      gap: 0 12px;
       align-items: center;
       color: #fff;
       &.active {
@@ -84,36 +95,37 @@
       }
       a {
         font-family: $body-font;
-        font-size: 16px;
-        color: $white;
-        text-transform: capitalize;
-        line-height: 29px;
+        font-size: 18px;
+        font-style: normal;
         font-weight: 400;
+        line-height: normal;
+        letter-spacing: 9px;
+        text-transform: uppercase;
+        color: $white;
         margin-bottom: 0;
         @include transition;
 
-
         &:hover {
           @include transition;
-           color: $primary-color;
+          color: $primary-color;
         }
       }
 
-       &:before {
-         content: "\f054";
-         font-size: 12px;
-         font-family: $font-awesome;
-         display: inline-flex;
-       }
+      &:before {
+        content: '\f054';
+        font-size: 12px;
+        font-family: $font-awesome;
+        display: inline-flex;
+      }
 
       &:first-child {
-       &:before {
-         display: none;
+        &:before {
+          display: none;
 
-         @include rmaxwd(375) {
-           display: block !important;
-         }
-       }
+          @include rmaxwd(375) {
+            display: block !important;
+          }
+        }
       }
     }
   }
