--- a/sass/modules/_paginations.scss
+++ b/sass/modules/_paginations.scss
@@ -40,7 +40,6 @@
       @include transition;
     }
   }
-
 }
 
 .basic-pagination,
@@ -62,14 +61,13 @@
     list-style: none;
     margin-bottom: 0;
     padding-left: 0;
-    justify-content: center;
+    justify-content: start;
 
     li {
       padding-top: 0;
     }
     .prev,
-    .next
-    {
+    .next {
       span {
         display: none;
       }
@@ -84,16 +82,16 @@
     align-items: center;
     justify-content: center;
     color: $black;
-    background-color: rgba(217, 161, 76, 0.1);
-    border-radius: 50%;
-    height: 67px;
-    width: 67px;
+    background-color: $white;
+    width: 45px;
+    height: 49px;
     @include transition;
-    font-size: 24px;
-    font-weight: 700;
-    //border: 1px solid $gray-300;
-    text-transform: capitalize;
-    font-family: $heading-font;
+    font-family: $body-font;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    border: 1px solid $gray;
 
     @include rmaxwd(767) {
       width: 40px;
@@ -113,6 +111,5 @@
       //border-color: $blue-color;
       @include transition;
     }
-
   }
 }
