--- a/sass/pages/_service-page.scss
+++ b/sass/pages/_service-page.scss
@@ -1,297 +1,501 @@
-// Process Area
-.process-step-area {
-    &.style-1 {
-        padding-top: 120px;
-        padding-bottom: 115px;
-
-        @include sm {
-            padding-top: 80px;
-            padding-bottom: 15px;
-        }
-
-        @include md {
-            padding-top: 100px;
-            padding-bottom: 15px;
-        }
-
-        @include lg {
-            padding-top: 120px;
-            padding-bottom: 35px;
-        }
-
-        .process-step {
-            &.style-1 {
-                @include sm {
-                    margin-bottom: 60px;
-                }
-
-                @include md {
-                    margin-bottom: 80px;
-                }
-
-                @include lg {
-                    margin-bottom: 80px;
-                    padding: 0 20px;
-                }
-            }
-        }
+// List page wrapper
+.list-page-wrapper {
+  .btn-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 27px;
+    .list-btn {
+      padding: 14px 20px;
+      border: 1px solid #e2c7c7;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: normal;
+      letter-spacing: 2.7px;
+      text-transform: uppercase;
+      color: $black;
+      &:hover {
+        background-color: $primary-color;
+        color: $white;
+      }
     }
-}
+  }
+  .sidebar {
+    background-color: #f8f5f0;
+    padding: 50px;
+    .sidebar-title {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      .sort-title {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 5.4px;
+        text-transform: uppercase;
+        color: $gray;
+        margin-bottom: 0;
+      }
+      .title {
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px;
+        color: $black;
+      }
+    }
+    .sidebar-widget {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+      gap: 8px;
+      label {
+        font-family: $body-font;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 29px; /* 181.25% */
+        text-transform: uppercase;
+        color: $black;
+      }
+      select,
+      input {
+        padding: 20px;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 2.1px;
+        background-color: $white;
+      }
+      input[type='date'] {
+        color: #a19292;
+        font-family: 'Barlow Condensed';
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        letter-spacing: 2.1px;
+      }
+      .select-wrapper {
+        position: relative;
+        select {
+          color: #a19292;
+          display: flex;
+          width: 100%;
+          appearance: none;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          background-size: 12px;
+          border-radius: 4px;
+          option {
+            padding: 10px;
+            background-color: #fff;
+            color: #000;
 
+            &:hover {
+              background-color: #e0e0e0;
+            }
+          }
+          select option[disabled] {
+            color: #a19292;
+          }
+        }
+        &:before {
+          content: '\f107';
+          font-size: 12px;
+          position: absolute;
+          font-family: $font-awesome;
+          right: 20px;
+          top: 50%;
+          transform: translateY(-50%);
+          pointer-events: none;
+        }
+      }
+
+      select::-ms-expand {
+        display: none;
+      }
+      &.price-filter {
+        input {
+          padding: 0;
+        }
+      }
+      &.checkbox {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        .custom-checkbox {
+          label {
+            line-height: normal;
+          }
+        }
+      }
+    }
+    .price-filter {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      .slider-container {
+        position: relative;
+        width: 100%;
+
+        input[type='range'] {
+          -webkit-appearance: none;
+          appearance: none;
+          position: absolute;
+          width: 100%;
+          height: 3px;
+          background: $gray;
+          pointer-events: none; // This ensures both sliders are on top of each other
+
+          &:first-of-type {
+            pointer-events: auto; // Allow interaction with the min slider
+          }
+
+          &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: $primary-color;
+            cursor: pointer;
+            position: relative;
+            z-index: 2;
+            pointer-events: auto;
+          }
+
+          &::-moz-range-thumb {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: #a0522d;
+            cursor: pointer;
+            pointer-events: auto;
+          }
+        }
+      }
+
+      .price-display {
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        text-transform: uppercase;
+        color: $black;
+        font-family: $body-font;
+      }
+    }
+    .custom-checkbox {
+      display: flex;
+      align-items: center;
+
+      label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        cursor: pointer;
+
+        input[type='checkbox'] {
+          display: none; // Hide the default checkbox
+        }
+
+        .checkmark {
+          display: inline-block;
+          width: 20px;
+          height: 20px;
+          border: 2px solid #f0e0e0; // Brown border color
+          border-radius: 3px; // Optional: can be square or rounded
+          background-color: $white;
+          box-shadow: 0px 4px 20px 0px rgba(190, 167, 167, 0.2);
+          position: relative;
+          transition: background-color 0.3s ease, border-color 0.3s ease;
+
+          &:after {
+            content: '';
+            position: absolute;
+            left: 4px;
+            top: 4px;
+            width: 8px;
+            height: 8px;
+            background-color: $primary-color;
+            // border: 2px solid #a0522d;
+            // border-width: 0 2px 2px 0;
+            // transform: rotate(45deg);
+            opacity: 0;
+            transition: opacity 0.3s ease;
+          }
+        }
+
+        input[type='checkbox']:checked + .checkmark {
+          background-color: $white; // Brown fill when checked
+          border-color: $primary-color;
+
+          &:after {
+            opacity: 1;
+          }
+        }
+      }
+    }
+  }
+}
 // Service Details Page
 .service-details-page {
-    padding-top: 120px;
+  padding-top: 120px;
+  padding-bottom: 120px;
+
+  @include sm {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+
+  @include md {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  @include lg {
     padding-bottom: 120px;
+  }
 
-    @include sm {
-        padding-top: 80px;
-        padding-bottom: 80px;
+  .service-details-wrapper {
+    padding-right: 38px;
+    @include rmaxwd(1399) {
+      padding-right: 12px;
+    }
+  }
+
+  .details-content {
+    .feature-image {
+      overflow: hidden;
+      margin-bottom: 30px;
+      position: relative;
+      .icon {
+        width: 60px;
+        height: 60px;
+        flex-shrink: 0;
+        padding: 8px;
+        background-color: $white;
+        position: absolute;
+        z-index: 1;
+        left: 30px;
+        top: 30px;
+        img {
+          width: auto;
+        }
+      }
+      img {
+        width: 100%;
+      }
     }
 
-    @include md {
-        padding-top: 100px;
-        padding-bottom: 100px;
+    .text {
+      margin-bottom: 30px;
+
+      .title {
+        color: $black;
+        margin-bottom: 20px;
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 30px;
+        margin-bottom: 30px;
+      }
     }
-    @include lg {
-        padding-bottom: 120px;
+
+    .member-court {
+      margin-top: 10px;
+      margin-bottom: 20px;
+      display: inline-block;
+
+      .desc {
+        font-family: $heading-font;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 27px;
+        color: $black;
+        margin-bottom: 0;
+      }
     }
 
-    .service-details-wrapper {
-        padding-right: 38px;
-        @include rmaxwd(1399){
-            padding-right: 12px;
-        }
+    p {
+      font-size: 16px;
+      line-height: 29px;
+      margin-bottom: 0;
     }
 
-    .details-content {
-        .feature-image {
-            overflow: hidden;
-            margin-bottom: 30px;
-            position: relative;
-            .icon{
-                width: 60px;
-                height: 60px;
-                flex-shrink: 0;
-                padding: 8px;
-                background-color: $white;
-                position: absolute;
-                z-index: 1;
-                left: 30px;
-                top: 30px;
-                img{
-                    width: auto;
-                }
-            }
-            img {
-                width: 100%;
-            }
-        }
-
-        .text {
-            margin-bottom: 30px;
-
-            .title {
-                color: $black;
-                margin-bottom: 20px;
-            }
-
-            p {
-                font-size: 16px;
-                line-height: 30px;
-                margin-bottom: 30px;
-            }
-        }
-
-        .member-court {
-            margin-top: 10px;
-            margin-bottom: 20px;
-            display: inline-block;
-
-            .desc {
-                font-family: $heading-font;
-                font-size: 18px;
-                font-weight: 700;
-                line-height: 27px;
-                color: $black;
-                margin-bottom: 0;
-            }
-        }
-
-        p {
-            font-size: 16px;
-            line-height: 29px;
-            margin-bottom: 0;
-        }
-
-        .icon-card-wrapper {
-            display: flex;
-            justify-content: space-between;
-            gap: 60px;
-            @include rmaxwd(991){
-                flex-direction: column;
-            }
-            @include lg{
-                flex-direction: column;
-            }
-            @include rmaxwd(1399){
-                gap: 30px;
-            }
-        }
+    .icon-card-wrapper {
+      display: flex;
+      justify-content: space-between;
+      gap: 60px;
+      @include rmaxwd(991) {
+        flex-direction: column;
+      }
+      @include lg {
+        flex-direction: column;
+      }
+      @include rmaxwd(1399) {
+        gap: 30px;
+      }
     }
+  }
 }
 
 // Service Key Featured
 .key-featured-area {
-    padding-top: 44px;
-    padding-bottom: 40px;
+  padding-top: 44px;
+  padding-bottom: 40px;
 
-    .gx-8 {
-        --bs-gutter-x: 8rem;
+  .gx-8 {
+    --bs-gutter-x: 8rem;
 
-        @include sm {
-            --bs-gutter-x: 1rem;
-        }
-
-        @include md {
-            --bs-gutter-x: 1rem;
-        }
-
-        @include lg {
-            --bs-gutter-x: 1rem;
-        }
-
-        @include xl {
-            --bs-gutter-x: 2rem;
-        }
+    @include sm {
+      --bs-gutter-x: 1rem;
     }
 
-    .key-featured-title {
-        font-size: 36px;
+    @include md {
+      --bs-gutter-x: 1rem;
+    }
+
+    @include lg {
+      --bs-gutter-x: 1rem;
+    }
+
+    @include xl {
+      --bs-gutter-x: 2rem;
+    }
+  }
+
+  .key-featured-title {
+    font-size: 36px;
+    color: $black;
+    line-height: initial;
+    margin-bottom: 40px;
+    display: block;
+  }
+
+  .single-key-featured {
+    margin-bottom: 40px;
+
+    .title-wrapper {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      margin-bottom: 20px;
+
+      .title {
+        font-size: 21px;
         color: $black;
         line-height: initial;
-        margin-bottom: 40px;
-        display: block;
+        margin-bottom: 0;
+      }
     }
-
-    .single-key-featured {
-        margin-bottom: 40px;
-
-        .title-wrapper {
-            display: flex;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 20px;
-
-            .title {
-                font-size: 21px;
-                color: $black;
-                line-height: initial;
-                margin-bottom: 0;
-            }
-        }
-    }
+  }
 }
 
 // Details Overview
 .details-overview-area {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+
+  .overview-item {
     display: flex;
-    flex-direction: column;
-    gap: 60px;
+    align-items: center;
 
-    .overview-item {
-        display: flex;
-        align-items: center;
-
-
-        @include sm {
-            flex-direction: column;
-            gap: 40px;
-        }
-
-        @include md {
-            gap: 40px;
-        }
-
-        @include lg {
-            gap: 40px;
-        }
-
-        @include xl {
-            gap: 40px;
-        }
-
-        &:nth-child(even) {
-            flex-direction: row-reverse;
-
-            @include sm {
-                flex-direction: column;
-            }
-        }
-
-        &:hover {
-            .image {
-                img {
-                    transform: scale(1.03);
-                    @include transition;
-                }
-            }
-        }
-
-        .image,
-        .content {
-            width: 50%;
-
-            @include sm {
-                width: 100%;
-            }
-        }
-
-        .image {
-            border-radius: 12px;
-            overflow: hidden;
-
-            img {
-                width: 100%;
-                transform: scale(1);
-                @include transition;
-            }
-        }
-
-        .content {
-            .title {
-                font-size: 36px;
-                line-height: initial;
-                margin-bottom: 25px;
-            }
-
-            .list-item {
-                margin-bottom: 0 !important;
-
-                ul {
-                    margin-bottom: 0 !important;
-                }
-            }
-        }
+    @include sm {
+      flex-direction: column;
+      gap: 40px;
     }
+
+    @include md {
+      gap: 40px;
+    }
+
+    @include lg {
+      gap: 40px;
+    }
+
+    @include xl {
+      gap: 40px;
+    }
+
+    &:nth-child(even) {
+      flex-direction: row-reverse;
+
+      @include sm {
+        flex-direction: column;
+      }
+    }
+
+    &:hover {
+      .image {
+        img {
+          transform: scale(1.03);
+          @include transition;
+        }
+      }
+    }
+
+    .image,
+    .content {
+      width: 50%;
+
+      @include sm {
+        width: 100%;
+      }
+    }
+
+    .image {
+      border-radius: 12px;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        transform: scale(1);
+        @include transition;
+      }
+    }
+
+    .content {
+      .title {
+        font-size: 36px;
+        line-height: initial;
+        margin-bottom: 25px;
+      }
+
+      .list-item {
+        margin-bottom: 0 !important;
+
+        ul {
+          margin-bottom: 0 !important;
+        }
+      }
+    }
+  }
 }
 
 // FAQ Area
 .faq-area {
-    &.style-3 {
-        padding-top: 60px;
-        padding-bottom: 105px;
+  &.style-3 {
+    padding-top: 60px;
+    padding-bottom: 105px;
 
-        @include sm {
-            padding-bottom: 0;
-        }
-
-        @include md {
-            padding-bottom: 85px;
-        }
-
-        .faq-title {
-            font-size: 36px;
-            margin-bottom: 30px;
-        }
+    @include sm {
+      padding-bottom: 0;
     }
+
+    @include md {
+      padding-bottom: 85px;
+    }
+
+    .faq-title {
+      font-size: 36px;
+      margin-bottom: 30px;
+    }
+  }
 }
