--- a/sass/style.scss
+++ b/sass/style.scss
@@ -231,6 +231,7 @@ Footer
 // Roomc-card
 @import 'modules/room-card/room-card';
 @import 'modules/room-card/room-card-two';
+@import 'modules/room-card/room-card-three';
 
 // Blog-card
 @import 'modules/blog-card/blog-card';
