--- a/css/style.css
+++ b/css/style.css
@@ -90991,7 +90991,8 @@ ul.children {
 }
 
 .room-card {
-  width: 505px;
+  max-width: 505px;
+  width: 100%;
   height: 656px;
   position: relative;
   overflow: hidden;
