--- a/sass/style.scss
+++ b/sass/style.scss
@@ -232,6 +232,7 @@ Footer
 @import 'modules/room-card/room-card';
 @import 'modules/room-card/room-card-two';
 @import 'modules/room-card/room-card-three';
+@import 'modules/room-card/room-card-four';
 
 // Blog-card
 @import 'modules/blog-card/blog-card';
