--- a/css/style.css
+++ b/css/style.css
@@ -76315,11 +76315,29 @@ table caption {
 table th,
 table td {
   background-color: transparent;
-  border: 1px solid #dfe2e9;
-  text-align: center;
-  padding: 8px;
+  border: 1px solid #e0e0e0;
+  padding: 20px 30px;
   transition: 0.3s;
-  color: #616670;
+  color: #222;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+table th.feature-price,
+table td.feature-price {
+  color: #808287;
+}
+table th.feature-price span,
+table td.feature-price span {
+  color: #222;
+}
+table th i,
+table td i {
+  font-size: 12px;
+  margin-right: 8px;
+  color: #808287;
 }
 table th#today,
 table td#today {
@@ -84660,42 +84678,53 @@ body.admin-bar .header-area.style-7 {
   gap: 10px;
 }
 
+.list-item-wrapper-outer {
+  display: flex;
+  gap: 108px;
+}
+
 .list-item-wrapper {
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 15px;
+  padding: 0;
+  list-style: none;
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .list-item-wrapper {
     gap: 10px;
   }
 }
-.list-item-wrapper .list-item {
+.list-item-wrapper li {
   display: flex;
-  gap: 15px;
+  gap: 8px;
   flex-wrap: nowrap;
   align-items: center;
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #222;
 }
-.list-item-wrapper .list-item .icon {
-  font-size: 20px;
-  color: #aa8453;
+.list-item-wrapper li i {
+  font-size: 12px;
+  color: #808287;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-shrink: 0;
-  border-radius: 50%;
 }
-.list-item-wrapper .list-item .text {
+.list-item-wrapper li .text {
   font-size: 16px;
   font-weight: 400;
   line-height: initial;
   margin-bottom: 0;
   color: #616670;
 }
-.list-item-wrapper .list-item.style-two {
+.list-item-wrapper li.style-two {
   gap: 10px;
 }
-.list-item-wrapper .list-item.style-two .icon {
+.list-item-wrapper li.style-two .icon {
   font-size: 8px;
 }
 
@@ -89521,6 +89550,21 @@ ul.children {
 .list-page-wrapper .sidebar .custom-checkbox label input[type=checkbox]:checked + .checkmark:after {
   opacity: 1;
 }
+.list-page-wrapper .sidebar .price-area .title {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-transform: uppercase;
+}
+.list-page-wrapper .sidebar .price-area .desc {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 0;
+}
 
 .list-page-wrapper.details-page .tab-slider {
   position: relative;
@@ -89598,6 +89642,48 @@ ul.children {
   width: 100%;
   height: 100%;
 }
+.list-page-wrapper.details-page .nav-tab {
+  display: flex;
+  align-items: center;
+  gap: 27px;
+}
+.list-page-wrapper.details-page .nav-tab li {
+  padding: 14px 20px;
+  border: 1px solid #e2c7c7;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 2.7px;
+  text-transform: uppercase;
+  color: #222;
+  transition: all 0.5s ease-out;
+}
+.list-page-wrapper.details-page .nav-tab li:hover,
+.list-page-wrapper.details-page .nav-tab li .active {
+  background-color: #aa8453;
+  color: #ffffff;
+  transition: all 0.5s ease-out;
+}
+.list-page-wrapper.details-page .contact {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+.list-page-wrapper.details-page .contact .single-item {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #222;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.list-page-wrapper.details-page .contact .single-item .desc {
+  margin-bottom: 0;
+}
+
 .service-details-page .details-content .feature-image {
   overflow: hidden;
   margin-bottom: 30px;
@@ -91224,6 +91310,7 @@ ul.children {
   align-items: center;
   gap: 30px;
   width: auto;
+  max-width: unset;
   height: 342px;
 }
 .room-card.style-3:hover .content-wrapper {
