--- a/sass/modules/_list-item.scss
+++ b/sass/modules/_list-item.scss
@@ -1,38 +1,47 @@
+.list-item-wrapper-outer {
+  display: flex;
+  gap: 108px;
+}
 .list-item-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 0;
+  list-style: none;
+
+  @include sm {
+    gap: 10px;
+  }
+  li {
     display: flex;
-    flex-direction: column;
-    gap: 18px;
-
-    @include sm {
-        gap: 10px;
+    gap: 8px;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-family: $body-font;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    color: $black;
+    i {
+      font-size: 12px;
+      color: $gray;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
-    .list-item {
-        display: flex;
-        gap: 15px;
-        flex-wrap: nowrap;
-        align-items: center;
-
-        .icon {
-            font-size: 20px;
-            color: $primary-color;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-shrink: 0;
-            border-radius: 50%;
-        }
-        .text {
-            font-size: 16px;
-            font-weight: 400;
-            line-height: initial;
-            margin-bottom: 0;
-            color: $text-color;
-        }
-        &.style-two{
-            gap: 10px;
-            .icon{
-                font-size: 8px;
-            }
-        }
+    .text {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: initial;
+      margin-bottom: 0;
+      color: $text-color;
     }
+    &.style-two {
+      gap: 10px;
+      .icon {
+        font-size: 8px;
+      }
+    }
+  }
 }
