--- a/sass/modules/room-card/_room-card-three.scss
+++ b/sass/modules/room-card/_room-card-three.scss
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 30px;
     width: auto;
+    max-width: unset;
     height: 342px;
     &:hover {
       .content-wrapper {
