add: service-details

--- a/css/style.css
+++ b/css/style.css
@@ -85689,10 +85689,6 @@ body.admin-bar .header-area.style-7 {
   background-color: #aa8453;
 }
 
-.comment-respond {
-  margin-top: 70px;
-}
-
 .blog-coment-title h2,
 .blog-coment-title .wp-block-comments-title,
 .wp-block-comments h2,
@@ -85951,6 +85947,13 @@ ul.children {
   display: flex;
   justify-content: space-between;
 }
+.post-comments-title h2 .title {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  color: #222;
+}
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .post-comments-title h2 {
     font-size: 28px;
@@ -85978,6 +85981,14 @@ ul.children {
 
 .comment-respond {
   position: relative;
+}
+.comment-respond .title {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  color: #222;
 }
 .comment-respond .contacts-email,
 .comment-respond .contacts-name,
@@ -86029,12 +86040,12 @@ ul.children {
   width: 100%;
   color: #808287;
   opacity: 1;
-  border: 1px solid #d0d0d0 !important;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 30px;
-  background-color: #ffffff;
   font-family: "Barlow Condensed", sans-serif !important;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  background-color: #f6f6f6;
 }
 .comment-respond input[type=submit] {
   height: 70px;
@@ -86049,7 +86060,12 @@ ul.children {
   opacity: 1;
 }
 .comment-respond *::placeholder {
-  color: #666;
+  color: #808287;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  font-family: "Barlow Condensed", sans-serif;
 }
 .comment-respond .contacts-message {
   margin-bottom: 10px;
@@ -86059,11 +86075,10 @@ ul.children {
   padding: 20px;
   width: 100%;
   color: #808287;
-  border: 1px solid #d0d0d0 !important;
   font-size: 16px;
   font-weight: 400;
   line-height: 30px;
-  background-color: #ffffff;
+  background-color: #f6f6f6;
   font-family: "Barlow Condensed", sans-serif !important;
   height: 150px;
   margin-bottom: 0;
@@ -89682,6 +89697,56 @@ ul.children {
 }
 .list-page-wrapper.details-page .contact .single-item .desc {
   margin-bottom: 0;
+}
+.list-page-wrapper.details-page .review .review-number {
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.list-page-wrapper.details-page .review .pricing-table .feature-description {
+  text-transform: uppercase;
+}
+.list-page-wrapper.details-page .review .pricing-table .feature-price {
+  text-align: end;
+}
+.list-page-wrapper.details-page .review .title-two {
+  font-family: "Barlow Condensed", sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 29px;
+  color: #222;
+}
+.list-page-wrapper.details-page .review .divider {
+  width: 100%;
+  height: 1px;
+  background-color: #e0e0e0;
+}
+.list-page-wrapper.details-page .review .rating-system .rating-row {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.list-page-wrapper.details-page .review .rating-system label {
+  width: 100px;
+  font-weight: bold;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #222;
+}
+.list-page-wrapper.details-page .review .rating-system .stars {
+  display: flex;
+  gap: 5px;
+  padding: 5px;
+  width: 150px;
+  justify-content: space-between;
+}
+.list-page-wrapper.details-page .review .rating-system .stars span {
+  font-size: 25px;
+  color: #000;
 }
 
 .service-details-page .details-content .feature-image {
