--- a/sass/modules/_comment-form.scss
+++ b/sass/modules/_comment-form.scss
@@ -14,6 +14,13 @@
     margin-bottom: 10px;
   }
   h2 {
+    .title {
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 29px;
+      color: $black;
+    }
     font-family: $heading-font;
     font-size: 48px;
     font-weight: 700;
@@ -34,15 +41,15 @@
       color: $primary-color;
     }
   }
-  .desc{
+  .desc {
     font-family: $body-font;
     font-size: 16px;
     font-weight: 400;
-    line-height: 30px; 
+    line-height: 30px;
     color: $gray;
     margin-bottom: 30px;
-    br{
-      @include rmaxwd(1399){
+    br {
+      @include rmaxwd(1399) {
         display: none;
       }
     }
@@ -50,7 +57,14 @@
 }
 .comment-respond {
   position: relative;
-
+  .title {
+    font-family: $body-font;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    color: $black;
+  }
   .contacts-email,
   .contacts-name,
   .single-input-field,
@@ -91,13 +105,12 @@
       font-size: 16px;
       font-weight: 400;
       font-family: $body-font;
-
     }
   }
   .comment-form-cookies-consent {
     display: none;
   }
-  input[type="number"] {
+  input[type='number'] {
     -webkit-appearance: textfield;
     -moz-appearance: textfield;
     appearance: textfield;
@@ -109,14 +122,14 @@
     width: 100%;
     color: $gray;
     opacity: 1;
-    border: 1px solid $gray-200 !important;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 30px;
-    background-color: $white;
     font-family: $body-font !important;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    background-color: #f6f6f6;
   }
-  input[type="submit"] {
+  input[type='submit'] {
     height: 70px;
     background-color: $primary-color;
     border-color: $primary-color;
@@ -125,7 +138,7 @@
     font-weight: 500;
   }
   *::-webkit-input-placeholder {
-    color: $gray-800;
+    color: $white;
   }
   *:-moz-placeholder {
     color: $gray-800;
@@ -142,10 +155,15 @@
     color: $gray-800;
   }
   *::placeholder {
-    color: $gray-800;
+    color: $gray;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    font-family: $body-font;
   }
 
-  .contacts-message{
+  .contacts-message {
     margin-bottom: 10px;
   }
   textarea {
@@ -153,18 +171,17 @@
     padding: 20px;
     width: 100%;
     color: $gray;
-    border: 1px solid $gray-200 !important;
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
-    background-color: $white;
+    background-color: #f6f6f6;
     font-family: $body-font !important;
     height: 150px;
     margin-bottom: 0;
   }
   input:focus,
   textarea:focus,
-  .form-select:focus{
+  .form-select:focus {
     outline: none !important;
     box-shadow: none;
     border-color: $primary-color !important;
