--- a/sass/pages/_service-page.scss
+++ b/sass/pages/_service-page.scss
@@ -358,6 +358,7 @@
         }
       }
     }
+    // Location Tab
     .contact {
       display: flex;
       flex-direction: column;
@@ -373,6 +374,65 @@
         align-items: center;
         .desc {
           margin-bottom: 0;
+        }
+      }
+    }
+    //Reviews Tab
+    .review {
+      .review-number {
+        font-size: 54px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+      .pricing-table {
+        .feature-description {
+          text-transform: uppercase;
+        }
+        .feature-price {
+          text-align: end;
+        }
+      }
+      .title-two {
+        font-family: $body-font;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 29px;
+        color: $black;
+      }
+      .divider {
+        width: 100%;
+        height: 1px;
+        background-color: #e0e0e0;
+      }
+      .rating-system {
+        .rating-row {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+        }
+        label {
+          width: 100px;
+          font-weight: bold;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          color: $black;
+        }
+
+        .stars {
+          display: flex;
+          gap: 5px;
+          padding: 5px;
+          width: 150px;
+          justify-content: space-between;
+        }
+
+        .stars span {
+          font-size: 25px;
+          color: #000;
         }
       }
     }
