--- a/css/style.css
+++ b/css/style.css
@@ -89964,43 +89964,11 @@ ul.children {
   margin-bottom: 30px;
 }
 
-.team-details-area {
-  padding-top: 130px;
-  padding-bottom: 120px;
-}
-@media only screen and (min-width: 0px) and (max-width: 767px) {
-  .team-details-area {
-    padding-top: 80px;
-    padding-bottom: 80px;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .team-details-area {
-    padding-top: 100px;
-    padding-bottom: 100px;
-  }
-}
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .team-details-area {
-    padding-top: 120px;
-  }
-}
 .team-details-area .image-wrapper {
   position: relative;
 }
 .team-details-area .image-wrapper img {
   width: 100%;
-}
-.team-details-area .image-wrapper .social-share {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  background-color: #f2f2f2;
-  padding: 25px;
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-  border-radius: 33px 0px 0px 0px;
 }
 @media (max-width: 991px) {
   .team-details-area .team-details-wrapper {
@@ -90008,10 +89976,11 @@ ul.children {
   }
 }
 .team-details-area .team-details-wrapper .main-title {
-  margin-bottom: 10px;
-  font-weight: 700;
-  line-height: 60px;
-  text-transform: capitalize;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #222;
 }
 @media (max-width: 991px) {
   .team-details-area .team-details-wrapper .main-title {
@@ -90020,28 +89989,94 @@ ul.children {
 }
 .team-details-area .team-details-wrapper .sub-title {
   font-family: "Barlow Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 5.4px;
+  text-transform: uppercase;
+}
+.team-details-area .team-details-wrapper .social-share {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+.team-details-area .team-details-wrapper .social-share a i {
+  color: #808287;
+}
+.team-details-area .team-details-wrapper .content {
+  color: #808287;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 30px;
-  margin-bottom: 20px;
+  line-height: 29px;
 }
-.team-details-area .team-details-wrapper .content {
-  color: #616670;
-  margin-bottom: 30px;
+@media (max-width: 1199px) {
+  .team-details-area .team-details-wrapper .content {
+    margin-bottom: 20px;
+  }
 }
 .team-details-area .team-details-wrapper .sort-title {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 34px;
+  padding-bottom: 15px;
   margin-bottom: 20px;
+  border-bottom: 1px solid #666;
+  display: inline-block;
 }
-.team-details-area .team-details-wrapper .skill-progress-card {
-  margin-bottom: 30px;
-  display: block;
+@media (max-width: 1199px) {
+  .team-details-area .team-details-wrapper .list-wrapper {
+    margin-top: 20px;
+  }
 }
-.team-details-area .team-details-wrapper .skill-progress-card .skill-progressbar {
-  margin-bottom: 20px;
+.team-details-area .team-details-wrapper .list-item-wrapper {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
-.team-details-area .team-details-wrapper .list-item-wrapper .list-item .icon {
+.team-details-area .team-details-wrapper .list-item-wrapper li {
+  display: flex;
+  gap: 10px;
+}
+.team-details-area .team-details-wrapper .list-item-wrapper li i {
   font-size: 16px;
+}
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .team-details-area .latest-project {
+    margin-top: 80px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .team-details-area .latest-project {
+    margin-top: 60px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .team-details-area .latest-project {
+    margin-top: 50px;
+  }
+}
+.team-details-area .latest-project .image-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+@media (max-width: 991px) {
+  .team-details-area .latest-project .image-wrapper {
+    flex-wrap: wrap;
+  }
+}
+.team-details-area .latest-project .desc {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 29px;
+  color: #808287;
 }
 
 .our-team-area.style-3 .section-title {
