--- a/sass/modules/breadcrumb/_breadcrumb.scss
+++ b/sass/modules/breadcrumb/_breadcrumb.scss
@@ -27,11 +27,7 @@
   }
 }
 .page-overlay {
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.7) 0%,
-    rgba(0, 0, 0, 0.7) 100%
-  );
+  background: rgba(49, 43, 43, 0.65);
   height: 100%;
   left: 0;
   position: absolute;
@@ -51,6 +47,8 @@
     font-weight: 400;
     line-height: normal;
     text-align: center;
+    position: relative;
+    z-index: 1;
 
     @include rmaxwd(375) {
       font-size: 32px;
@@ -62,8 +60,23 @@
     }
   }
 }
+.breadcrumb-wrapper {
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(49, 43, 43, 0.6);
+    z-index: 1;
+  }
+}
 .breadcrumb-list {
   text-align: center;
+  position: relative;
+  z-index: 1;
 
   ul {
     margin-bottom: 0;
