--- a/css/style.css
+++ b/css/style.css
@@ -82410,6 +82410,9 @@ body.admin-bar .header-area.style-7 {
 }
 .single-post-item .post-thumbnail img,
 .single-post-item .post-video img {
+  max-width: 920px;
+  width: 100%;
+  max-height: 575px;
   transform: scale(1);
   transition: all 0.5s ease-out;
 }
@@ -82496,11 +82499,7 @@ body.admin-bar .header-area.style-7 {
   }
 }
 .single-post-item .post-meta .author-img {
-  width: 37px;
-  height: 37px;
   position: relative;
-  border-radius: 50%;
-  overflow: hidden;
 }
 .single-post-item .post-meta .author-img img {
   width: 100%;
